# ais-deploy-test

./: .env_sample  .gitignore  Dockerfile  README.md  Untitled Diagram.drawio  amplify.yml  package-lock.json  package.json  pyproject.toml  requirement.txt
AIS_inventory/: docker-compose.yaml
AIS_inventory/api/: db.py  main.py
AIS_inventory/doc2vec/: index.py
ais-proto-2/: .gitignore  bottle_server.py  d2v_model_gen_onlydescript.py  d2v_model_use.py  d2vd.py  get_google_biblio_data.py  ipsj_model.py  normalize.py  sample.py  use2.py
ais-proto-2/views/: ipsj_search.html
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
api/: firebase.py  main.py  migrate_db.py  settings.py
api/crawling/: convert_news_data.py  convert_to_json.py  crawl.py  crawling.py  get_from_json_file.py  get_from_s3.py  index.py  main.py
api/doc2vec/: predict_similar_book.py  use2.py
api/json/: id_0029015103.json  id_0070109109.json  id_0071212078.json  id_0071398732.json  id_012513830X.json  id_0130082155.json  id_0130476773.json  id_0130497843.json  id_0130671002.json  id_0130893552.json  id_0140279512.json  id_0140284559.json  id_0141011904.json  id_0195060806.json  id_0195131991.json  id_0195165039.json  id_0195667611.json  id_019566762X.json  id_0195781295.json  id_0198280610.json  id_0198298560.json  id_0199251282.json  id_0199252912.json  id_0201127938.json  id_0202306879.json  id_0205283217.json  id_0205414893.json  id_0205453538.json  id_0205491111.json  id_0226025985.json  id_0226776891.json  (+21835 more)
doc2vec/: index.py
(+11081 files in other folders)
