[tool.poetry]
name = "inventory_inspection_application"
version = "0.1.0"
description = ""
authors = ["Daiki Hirose <speeed131@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.26"
PyMySQL = "^1.0.2"
gensim = "^4.1.2"
Janome = "^0.4.1"
firebase-admin = "^5.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
